backend/Chatbackend.log
/home/rino/deploy/lib64/python3.9/site-packages/networkx/utils/backends.py:135: RuntimeWarning: networkx backend defined more than once: nx-loopback
  backends.update(_get_backends("networkx.backends"))
Device set to use cpu
INFO:     Will watch for changes in these directories: ['/home/rino/deploy/backend']
INFO:     Uvicorn running on http://0.0.0.0:8010 (Press CTRL+C to quit)
INFO:     Started reloader process [148031] using StatReload
/home/rino/deploy/lib64/python3.9/site-packages/networkx/utils/backends.py:135: RuntimeWarning: networkx backend defined more than once: nx-loopback
  backends.update(_get_backends("networkx.backends"))
Device set to use cpu
INFO:     Started server process [148049]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
Description:  un gentille petit garçon
INFO:     102.17.118.18:0 - "POST /ask HTTP/1.0" 200 OK
INFO:     102.17.118.18:0 - "OPTIONS /ask HTTP/1.0" 200 OK
Description:  un gentille petit garçon
INFO:     102.17.118.18:0 - "POST /ask HTTP/1.0" 200 OK
Description:  un gentille petit garçon
INFO:     102.17.118.18:0 - "POST /ask HTTP/1.0" 200 OK
Description:  un mignon petit chien qui fait wouf ! à chaque réponse
INFO:     102.17.118.18:0 - "POST /ask HTTP/1.0" 200 OK
WARNING:  StatReload detected changes in 'rag/rag_engine.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [148049]
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/usr/lib64/python3.9/multiprocessing/spawn.py", line 116, in spawn_main
    exitcode = _main(fd, parent_sentinel)
  File "/usr/lib64/python3.9/multiprocessing/spawn.py", line 125, in _main
    prepare(preparation_data)
  File "/usr/lib64/python3.9/multiprocessing/spawn.py", line 236, in prepare
    _fixup_main_from_path(data['init_main_from_path'])
  File "/usr/lib64/python3.9/multiprocessing/spawn.py", line 287, in _fixup_main_from_path
    main_content = runpy.run_path(main_path,
  File "/usr/lib64/python3.9/runpy.py", line 288, in run_path
    return _run_module_code(code, init_globals, run_name,
  File "/usr/lib64/python3.9/runpy.py", line 97, in _run_module_code
    _run_code(code, mod_globals, init_globals,
  File "/usr/lib64/python3.9/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/home/rino/deploy/backend/main.py", line 16, in <module>
    from rag.rag_engine import retrieve_documents, generate_answer
  File "/home/rino/deploy/backend/rag/rag_engine.py", line 63
    f"Tu dois toujours répondre  à partir des **contextes fournis** en  suivant la description suivante :{description if description else 'sois poli et clair.'}
                                                                                                                                                                ^
SyntaxError: EOL while scanning string literal
